codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"Latency p95     0ms  Audit fallback 0  Cache hit 100.0%  Ctrl+O Observability   "
"                                                                                "
"The model wants to apply changes                                                "
"                                                                                "
"This will grant write access to /tmp for the remainder of this session.         "
"                                                                                "
"▌Apply changes?                                                                 "
"▌ Yes   No, provide feedback                                                    "
"                                                                                "
