codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_idle_h1.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"Latency p95     0ms  Audit fallback 0  C"
