codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: visual
---
> I’m going to search the repo for where “Change Approved” is rendered to update
  that view.
  ⚡  Task active

  └ Search Change Approved
    Read diff_render.rs

  Investigating rendering code (0s • Esc to interrupt)

▌ Summarize recent commits
▌

⏎ send   ⌃J newline   ⌃T transcript   ⌃C quit
