codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"Latency p95     0ms  Audit fallback 0  Cache hit 100.0%  Ctrl+O Observability   "
"                                                                                "
"  Analyzing (0s • Esc to interrupt)                                             "
"                                                                                "
"▌ Ask Codex to do anything                                                      "
"                                                                                "
"                                                                                "
